# tripadvisor-foodbot

./: .env.example  .env.template  .gitignore  .gitmodules  .prettierignore  LICENSE  Makefile  README.md  _chainlit.py  _streamlit.py  app.py  chainlit.md  compose.yaml  package.json  pyproject.toml  setup.py
.chainlit/: config.toml
.github/workflows/: linter.yaml  test.yaml
.streamlit/: config.toml
cli/: qdrant_loader.py
include/: README.md
include/data/: fs_geolocation.parquet  fs_location.parquet
prisma/: schema.prisma
public/: stylesheet.css  theme.json
public/elements/: AssistantCard.jsx
ranker/: electre_iii.py  scoring.py
src/: chainlit.py  core.py  main.py
src/bigquery/: handler.py
src/chat/: agent.py  callback.py  callbacks.py  chainlit.py  client.py  models.py  prompt.py  tools.py  utils.py
src/helper/: utils.py  vars.py
src/qdrant/: base.py  load.py  query.py
src/qdrant/cli/: loader.py
src/ranker/: electre_iii.py  scoring.py  workflow.py
src/s3/: client.py
tests/: test_streamlit_smoke.py
ui/: app.py
utils/: bigquery.py  helper.py  tools.py
utils/chat/: agent.py  client.py  llm.py  prompt.py  tools.py
utils/qdrant/: base.py  load.py  query.py
