[project]
name = "tripadvisor-foodbot"
version = "0.1.0"
description = "TripAdvisor Food Bot"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "boto3==1.38.26",
    "chainlit==2.5.5",
    "db-dtypes==1.4.2",
    "fastembed==0.6.1",
    "google-cloud-bigquery==3.31.0",
    "google-cloud-bigquery-storage==2.30.0",
    "llama-index==0.12.30",
    "loguru==0.7.3",
    "numba==0.61.2",
    "pandas==2.2.3",
    "pytest==8.3.5",
    "qdrant-client==1.13.3",
    "scikit-learn==1.6.1",
    "sqlparse==0.5.3",
    "streamlit==1.45.1",
    "streamlit-authenticator==0.4.2",
    "streamlit-geolocation==0.0.10",
    "tabulate==0.9.0",
    "unidecode==1.4.0",
    "uuid==1.30",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = [
    "ruff==0.11.5",
]

[tool.ruff]
line-length = 120
exclude = [".venv", "build", "dist", "include"]

[tool.ruff.lint]
select = ["F", "I", "RUF022"]

[tool.uv]
package = true
